started simulation (task3)

--- a/source/task2/dnn_accel_system/testbench/dnn_accel_system_tb.html
+++ b/source/task2/dnn_accel_system/testbench/dnn_accel_system_tb.html
@@ -67,7 +67,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   </table>
   <table class="blueBar">
    <tr>
-    <td class="l">2023.08.23.21:33:18</td>
+    <td class="l">2023.09.11.16:28:10</td>
     <td class="r">Datasheet</td>
    </tr>
   </table>
@@ -233,7 +233,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
       <table>
        <tr>
         <td class="parametername">AUTO_GENERATION_ID</td>
-        <td class="parametervalue">1692851598</td>
+        <td class="parametervalue">1694474890</td>
        </tr>
        <tr>
         <td class="parametername">AUTO_UNIQUE_ID</td>
@@ -2702,11 +2702,11 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">gui_reference_clock_frequency</td>
-        <td class="parametervalue">100.0</td>
+        <td class="parametervalue">50.0</td>
        </tr>
        <tr>
         <td class="parametername">reference_clock_frequency</td>
-        <td class="parametervalue">100.0 MHz</td>
+        <td class="parametervalue">50.0 MHz</td>
        </tr>
        <tr>
         <td class="parametername">gui_channel_spacing</td>
@@ -2786,7 +2786,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">gui_actual_multiply_factor0</td>
-        <td class="parametervalue">5</td>
+        <td class="parametervalue">10</td>
        </tr>
        <tr>
         <td class="parametername">gui_actual_frac_multiply_factor0</td>
@@ -2834,7 +2834,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">gui_actual_multiply_factor1</td>
-        <td class="parametervalue">5</td>
+        <td class="parametervalue">10</td>
        </tr>
        <tr>
         <td class="parametername">gui_actual_frac_multiply_factor1</td>
@@ -3890,11 +3890,11 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">m_cnt_hi_div</td>
-        <td class="parametervalue">3</td>
+        <td class="parametervalue">5</td>
        </tr>
        <tr>
         <td class="parametername">m_cnt_lo_div</td>
-        <td class="parametervalue">2</td>
+        <td class="parametervalue">5</td>
        </tr>
        <tr>
         <td class="parametername">n_cnt_hi_div</td>
@@ -3914,7 +3914,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">m_cnt_odd_div_duty_en</td>
-        <td class="parametervalue">true</td>
+        <td class="parametervalue">false</td>
        </tr>
        <tr>
         <td class="parametername">n_cnt_odd_div_duty_en</td>
@@ -4430,11 +4430,11 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">pll_cp_current</td>
-        <td class="parametervalue">30</td>
+        <td class="parametervalue">20</td>
        </tr>
        <tr>
         <td class="parametername">pll_bwctrl</td>
-        <td class="parametervalue">2000</td>
+        <td class="parametervalue">4000</td>
        </tr>
        <tr>
         <td class="parametername">pll_output_clk_frequency</td>
@@ -4470,7 +4470,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">gui_parameter_values</td>
-        <td class="parametervalue">3,2,256,256,false,true,true,false,5,5,1,0,ph_mux_clk,false,false,5,5,9,4,ph_mux_clk,false,false,2,30,2000,500.0 MHz,1,none,glb,m_cnt,ph_mux_clk,false</td>
+        <td class="parametervalue">5,5,256,256,false,true,false,false,5,5,1,0,ph_mux_clk,false,false,5,5,9,4,ph_mux_clk,false,false,2,20,4000,500.0 MHz,1,none,glb,m_cnt,ph_mux_clk,false</td>
        </tr>
        <tr>
         <td class="parametername">gui_mif_generate</td>
@@ -5540,7 +5540,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   <table class="blueBar">
    <tr>
     <td class="l">generation took 0.00 seconds</td>
-    <td class="r">rendering took 0.10 seconds</td>
+    <td class="r">rendering took 0.09 seconds</td>
    </tr>
   </table>
  </body>
